# filter

./: .clang-format  .gitignore  CMakeLists.txt
inc/: bcsv.h  kmp.h  trie.h
src/: bcsv.cc  kmp.cc  main.cc  trie.cc
